--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-phonenumber-field==7.3.0
 phonenumbers==8.13.27
 gunicorn==21.2.0
 whitenoise==6.6.0
+firebase-admin==6.4.0
 coverage==7.4.0
 faker==22.0.0
 freezegun==1.4.0
